# oarder

./: .gitignore  Dockerfile  Makefile  pyproject.toml
data/: request.json
oarder/: aws.py  oarder.py  order.py
scripts/: env.sh
tests/: test_order.py
