[tool.poetry]
name = "oarder"
version = "0.1.0"
description = ""
authors = ["Kevin W. Beam <kevin.beam@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
harmony-py = "^0.4.15"
boto3 = "^1.34.145"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
moto = "^5.0.11"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
